# hpc-ssh-mcp

./: .gitignore  README.md  pyproject.toml  ssh_hpc_server.py
docs/superpowers/plans/: 2026-05-06-hpc-ssh-mcp-hardening.md
tests/: conftest.py  test_helpers.py  test_regressions.py  test_tools_existing.py  test_tools_new.py
