[project]
name = "hpc-ssh-mcp"
version = "0.2.0"
description = "SSH & HPC Remote Control MCP Server — universal bridge to SSH-enabled servers and supercomputers"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["ssh_hpc_server.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
