[project]
name = "hpc-ssh-mcp"
version = "0.3.0"
description = "SSH & HPC Remote Control MCP Server — universal bridge to SSH-enabled servers and supercomputers"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["ssh_hpc_server.py"]

[project.scripts]
hpc-ssh-mcp = "ssh_hpc_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
